# OttoRobot-baseboard

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  MotionController.cpp  MotionController.hpp  UIManager.cpp  UIManager.hpp  UartHandler.cpp  UartHandler.hpp  app_process.c  app_process.h  config.h  esp32c3_szp.c  esp32c3_szp.h  idf_component.yml  main.c  main.cpp  motion_control.c  motion_control.h
main/display/: AnimationData.h  AnimationManager.cpp  AnimationManager.h  AnimationPlayer.cpp  AnimationPlayer.h  AnimationProvider.h  DualScreenManager.cpp  DualScreenManager.h  GC9A01_driver.cpp  GC9A01_driver.hpp  SDCardAnimationProvider.cpp  SDCardAnimationProvider.h  lvgl_fs_port.cpp  lvgl_fs_port.h
main/driver/: PCA9685.cpp  PCA9685.hpp  sd_card_manager.cpp  sd_card_manager.h  servo.cpp  servo.hpp  uart.cpp  uart.hpp
main/motion_manager/: ActionManager.cpp  ActionManager.hpp  DecisionMaker.cpp  DecisionMaker.hpp  EMAFilter.hpp  FaceTracker.cpp  FaceTracker.hpp  MotionController.cpp  MotionController.hpp  MotionStorage.cpp  MotionStorage.hpp  Motion_types.hpp  ServoCalibration.hpp  guide.txt
main/sound/: DualI2SReader.cpp  DualI2SReader.hpp  SoundManager.cpp  SoundManager.hpp  SrpSoundLocalizer.cpp  SrpSoundLocalizer.hpp  VAD.cpp  VAD.hpp  main.cpp.example
main/web_server/: WebLogger.cpp  WebLogger.hpp  WebServer.cpp  WebServer.hpp
main/www/: index.html
